# exs-shell

./: .gitignore  README.md  config.jsonc  dependecies.txt  install-local.sh  install.sh  pyproject.toml  run.sh  setup.py
exs_shell/: __init__.py  colors.json  init.py  ipc.py  shell.py
exs_shell/app/: __init__.py  path.py  register.py  vars.py  watch.py
exs_shell/app/init/: modules.py  services.py  states.py  styles.py  system.py
exs_shell/base/window/: animated.py
exs_shell/cli/: __init__.py  __main__.py  ipc.py  shell.py  update.py  version.py
exs_shell/colors/: utils.py
exs_shell/config/: cfg.py  user.py
exs_shell/configs/user/: __init__.py  appearence.py  bar.py  lock.py  main.py  notification.py  osd.py  weather.py
exs_shell/controllers/: events.py
exs_shell/controllers/commands/: __init__.py  launcher.py  settings.py
exs_shell/core/: py.py
exs_shell/exs_deprecated/: init.py  ipc.py  shell.py
exs_shell/interfaces/: types.py
exs_shell/ipc_utils/: client.py  utils.py
exs_shell/register/: __init__.py  cmd.py  deco.py
exs_shell/state/: __init__.py
exs_shell/styles/: colors.scss  main.scss  palettes.scss
exs_shell/utils/: __init__.py  clipboard.py  colors.py  colorscheme.py  commands.py  dependencies.py  load_scss.py  lock.py  loop.py  matugen.py  monitor.py  notify_system.py  other.py  path.py  proc.py  system.py  urls.py  window.py
exs_shell/window/: wallpaper.py
exs_shell_deprecated/: init.py  ipc.py  shell.py
exs_shell_deprecated/base/: singleton.py
exs_shell_deprecated/colors/: utils.py
exs_shell_deprecated/config/: cfg.py  log.py  user.py
exs_shell_deprecated/ipc_utils/: client.py  server.py  utils.py
exs_shell_deprecated/styles/: colors.scss
exs_shell_deprecated/utils/: load_scss.py  lock.py  notify_system.py  path.py  proc.py
exs_shell_deprecated/window/: __init__.py  wallpaper.py
exs_shell_legacy/config/: __init__.py
exs_shell_legacy/utils/: clipboard.py  colors.py
matugen/: config.toml
matugen/templates/: colors.json  colors.scss  gtk-colors.css  kitty.conf  niri.kdl  nvim-colors.vim
scripts/: install-dev.sh  install-local.sh  install.sh  uninstall.sh
src/: ipc.py  main.py  run.py  user_options.py
src/base/: singleton.py
src/commands/: launcher.py  notification.py  osd.py
src/config/: __init__.py  cfg.py  user.py
src/ipc_server/: client.py  server.py  utils.py
src/ipc_utils/: server.py  utils.py
src/modules/: __init__.py
src/styles/: main.scss
src/utils/: __init__.py  colors.py  path.py  proc.py
src/window/: wallpaper.py
(+393 files in other folders)
