[build-system]
requires = ["setuptools>=65.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[project]
name = "exs-shell"
version = "0.1.6"
description = "Just Desktop for Niri Wayland Compositor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ignis @ git+https://git@github.com/ignis-sh/ignis.git",
    "pam>=0.2.0",
    "pillow>=12.0.0",
    "psutil>=7.1.0",
    "requests>=2.32.5",
]
authors = [
    { name = "kipoha", email = "kipoha.core@gmail.com" },
]

[tool.uv.sources]
ignis = { git = "https://github.com/ignis-sh/ignis.git" }

[project.scripts]
exs-shell = "run:main"
exs-ipc = "ipc:main"

[tool.setuptools.packages.find]
where = ["src"]
