[build-system]
requires = ["setuptools>=65.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[project]
name = "exs-shell"
version = "0.2.0"
description = "Just Desktop for Niri Wayland Compositor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ignis @ git+https://git@github.com/ignis-sh/ignis.git",
    "materialyoucolor>=2.0.10",
    "pam>=0.2.0",
    "pillow>=12.0.0",
    "psutil>=7.1.0",
    "pygobject>=3.54.3",
    "requests>=2.32.5",
    "six>=1.17.0",
    "watchdog>=6.0.0",
]
authors = [
    { name = "kipoha", email = "kipoha.core@gmail.com" },
]

[tool.uv.sources]
ignis = { git = "https://github.com/ignis-sh/ignis.git" }

[project.scripts]
exs-shell = "exs_shell.cli.shell:main"
exs-ipc = "exs_shell.cli.ipc:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["exs_shell*"]
